<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dp">

    <TextView
        android:id="@+id/textView_habitName"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_habit_sample"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_day0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_day0" />

    <ImageView
        android:id="@+id/imageView_day0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_day1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_habitName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_x"
        android:contentDescription="@string/string_today" />

    <ImageView
        android:id="@+id/imageView_day1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_day2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_day0"
        app:layout_constraintTop_toTopOf="@+id/imageView_day0"
        app:srcCompat="@drawable/ic_x"
        android:contentDescription="@string/string_yesterday"/>

    <ImageView
        android:id="@+id/imageView_day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_day3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_day1"
        app:layout_constraintTop_toTopOf="@+id/imageView_day0"
        app:srcCompat="@drawable/ic_x"
        android:contentDescription="@string/string_2DaysAgo"/>

    <ImageView
        android:id="@+id/imageView_day3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_day4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_day2"
        app:layout_constraintTop_toTopOf="@+id/imageView_day0"
        app:srcCompat="@drawable/ic_x"
        android:contentDescription="@string/string_3DaysAgo"/>

    <ImageView
        android:id="@+id/imageView_day4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_day3"
        app:layout_constraintTop_toTopOf="@+id/imageView_day0"
        app:srcCompat="@drawable/ic_x"
        android:contentDescription="@string/string_4DaysAgo"/>
</android.support.constraint.ConstraintLayout>